
+ new function for spatial community detection

Changes in version 1.3.10 (2022-10-22)

+ fix axis.ratio to 1 in plotSpatial function and set scales = "fixed"

Changes in version 1.5.1 (2022-11-22)

+ fix axis.ratio to 1 in plotSpatial function and set scales = "fixed"

Changes in version 1.5.2 (2022-11-23)

+ Bug fix minDistToCells: return NA when all cells of an image belong to a patch

Changes in version 1.5.3 (2023-03-23)

+ Replaced merge function by left_join as safety measure

Changes in version 1.5.4 (2023-04-04)

+ Added option to get permutation counts returned from testInteractions

Changes in version 1.5.5 (2023-04-20)

+ Bug fix: in corner cases, levels of the permuted factors in the testInteractions function do not match the baseline.
+ Bug fix: testInteractions now works for cells that are not ordered by grouping level
+ Added explicitly message for some functions that the output is ordered by image

Changes in version 1.7.1 (2023-06-07)

+ More info on reproducibility using detectCommunity

Changes in version 1.7.3 (2023-06-20)

+ More info on reproducibility using testInteractions

Changes in version 1.7.4 (2023-08-09)

+ Bug fix: correctly setting the "aspect.ratio" argument in plotSpatial to fix the physical units of the x- and y-axis

Changes in version 1.7.5 (2023-09-14)

+ Added more internal validity checks for 'read_steinbock'
+ Changed the way messages in vroom are silenced
+ Stop allowing Object numbers to be different between intensities and regionprops
+ Stop allowing missing files in regionprops and neighbors 

Changes in version 1.7.6 (2023-09-26)

+ Updated example data in "inst" to newest version

Changes in version 1.7.7 (2023-10-02)

+ Bug fix: in rare cases the testInteractions p-values were not correctly computed due to machine precision issues

Changes in version 1.7.8 (2023-10-19)

+ spatialCoords are not initialised with rownames anymore

Changes in version 1.9.1 (2023-11-20)

+ Switched from aes_ to .data
