@@ -161,5 +161,8 @@ read_steinbock <- function(path,
     # Add panel data
     object <- .add_panel(object, path, panel_file, extract_names_from)
     
+    # Add colnames
+    colnames(object) <- paste0(object$sample_id, "_", object$ObjectNumber)
+    
     return(object)
 }
