@@ -216,4 +216,6 @@ Changes in version 1.7.8 (2023-10-19)
 Changes in version 1.9.1 (2023-11-20)
 
 + Switched from aes_ to .data
++ Initialise SPE and SCE objects with colnames
++ Additional test within binAcrossPixels
 
